Final version with basic calculator functionality.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_weight="5"
@@ -19,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Clear"
+            android:onClick="clean"
             android:textSize="20sp"
             android:layout_weight="3"/>
 
@@ -29,7 +29,7 @@
             android:layout_gravity="right"
             android:layout_weight="1"
             android:gravity="right"
-            android:text="0"
+            android:hint="0"
             android:textSize="50sp" />
     </LinearLayout>
 
@@ -41,6 +41,7 @@
 
         <Button
             android:id="@+id/no7"
+            android:onClick="operationStart"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="7"
@@ -49,6 +50,7 @@
 
         <Button
             android:id="@+id/no8"
+            android:onClick="operationStart"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="8"
@@ -56,6 +58,7 @@
             android:layout_weight="1"/>
 
         <Button
+            android:onClick="operationStart"
             android:id="@+id/no9"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -64,6 +67,7 @@
             android:layout_weight="1"/>
 
         <Button
+            android:onClick="operationMid"
             android:id="@+id/divide"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -79,6 +83,7 @@
         android:layout_weight="1">
 
         <Button
+            android:onClick="operationStart"
             android:id="@+id/no4"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -87,6 +92,7 @@
             android:layout_weight="1"/>
 
         <Button
+            android:onClick="operationStart"
             android:id="@+id/no5"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -95,6 +101,7 @@
             android:layout_weight="1"/>
 
         <Button
+            android:onClick="operationStart"
             android:id="@+id/no6"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -103,6 +110,7 @@
             android:layout_weight="1"/>
 
         <Button
+            android:onClick="operationMid"
             android:id="@+id/product"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -118,6 +126,7 @@
         android:layout_weight="1">
 
         <Button
+            android:onClick="operationStart"
             android:id="@+id/no1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -126,6 +135,7 @@
             android:layout_weight="1"/>
 
         <Button
+            android:onClick="operationStart"
             android:id="@+id/no2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -134,6 +144,7 @@
             android:layout_weight="1"/>
 
         <Button
+            android:onClick="operationStart"
             android:id="@+id/no3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -142,6 +153,7 @@
             android:layout_weight="1"/>
 
         <Button
+            android:onClick="operationMid"
             android:id="@+id/minus"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -157,6 +169,7 @@
         android:layout_weight="1">
 
         <Button
+            android:onClick="operationStart"
             android:id="@+id/decimal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -165,6 +178,7 @@
             android:layout_weight="1"/>
 
         <Button
+            android:onClick="operationStart"
             android:id="@+id/no0"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -174,6 +188,8 @@
 
         <Button
             android:id="@+id/result"
+            android:onClick="answer"
+            android:layout_margin="5.5dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@android:color/holo_orange_dark"
@@ -183,6 +199,7 @@
             android:layout_weight="1"/>
 
         <Button
+            android:onClick="operationMid"
             android:id="@+id/sum"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
